<resources>
    <string name="app_name">海乐生活</string>
    <string name="account">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="submit">提交</string>
    <string name="save">保存</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="i_know">知道了</string>
    <string name="get_location">获取位置</string>
    <string name="more">更多</string>
    <string name="load_more">加载更多</string>
    <string name="view_more">查看更多</string>
    <string name="device">设备</string>
    <string name="num">数量</string>
    <string name="idle">空闲</string>
    <string name="copy">复制</string>
    <string name="in_use">使用中</string>
    <string name="device_in_use">设备使用中</string>
    <string name="occupy">占用</string>
    <string name="fault">故障</string>
    <string name="distance">距离</string>
    <string name="you">您</string>
    <string name="affirm">确认</string>
    <string name="selected">选好了</string>
    <string name="minute">分钟</string>
    <string name="finish">完成</string>
    <string name="copy_success">复制成功</string>
    <string name="am">上午</string>
    <string name="pm">下午</string>
    <string name="tip">提示</string>
    <string name="scan">扫码</string>
    <string name="coming_soon">敬请期待</string>
    <string name="please_input">请输入</string>
    <string name="refresh">刷新</string>
    <string name="orders">下单</string>
    <string name="verify">验证</string>
    <string name="verify_device">验证机器</string>
    <string name="canister_self_cleaning">筒自洁</string>
    <string name="pay">支付</string>
    <string name="device_run">设备运行</string>
    <string name="device_running">设备运行中</string>
    <string name="check_reason">查看原因</string>
    <string name="order_error_prompt">故障，请联系商家处理。若运行正常请忽略本条提醒。</string>
    <string name="appointment_success">预约成功</string>
    <string name="page_time_prefix">待支付，剩余</string>
    <string name="verify_time_prefix">待验证，剩余</string>
    <string name="self_cleaning_prefix">待启动，剩余</string>
    <string name="verify_order_prompt">请在规定时间内完成验证，否则订单将会取消设备内有衣物？</string>
    <string name="already_appointment_success">已预约成功</string>
    <string name="service">服务</string>
    <string name="discounts">优惠</string>
    <string name="close">关闭</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="details">详情</string>
    <string name="back">返回</string>
    <string name="agreement_hint">根据国家法律法规的要求，我们更新了《隐私政策》，帮助您了解我们收集、使用、存储和共享个人信息的情况，特别是我们所采集的个人信息类型及用途，同时您还可以了解到您所共享的相关权利和实现途径，以及我们为了保护好您的个人信息安全所采取的相关策略。</string>
    <string name="login_title">登录海乐生活</string>
    <string name="bind_phone_title">绑定手机号</string>
    <string name="phone_number">手机号码</string>
    <string name="phone">手机号</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_agreement">我已阅读并同意《隐私权政策》</string>
    <string name="code">验证码</string>
    <string name="getCode">获取验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="send_again">再次发送</string>
    <string name="send_success">发送成功</string>
    <string name="send_again1">重新获取</string>
    <string name="send_again2">重新发送</string>
    <string name="phone_empty">请先输入手机号</string>
    <string name="password_empty">请先输入密码</string>
    <string name="code_empty">请先输入验证码</string>
    <string name="password_err">密码必须包含6-12位大小写字母和数字</string>
    <string name="agreement_err">请阅读并同意协议</string>
    <string name="other_login_title">使用以下方式进行账户注册/登录</string>
    <string name="phone_prefix">中国（+86）</string>
    <string name="password_hint">请输入新密码（6-12位数字或字母）</string>
    <string name="password_again_hint">请再次输入新密码</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_store">商城</string>
    <string name="main_tab_order">订单</string>
    <string name="main_tab_mine">我的</string>
    <string name="for_take">拍照</string>
    <string name="for_album">相册</string>
    <string name="update_success">修改成功</string>
    <string name="update_failure">修改失败</string>
    <string name="upload_failure">上传失败</string>
    <string name="for_one_code">条形码</string>
    <string name="for_qr_code">二维码</string>
    <string name="home_category_wash">洗烘</string>
    <string name="home_category_hair">吹风</string>
    <string name="home_category_drinking">饮水</string>
    <string name="home_category_shower">淋浴</string>
    <string name="home_category_dry_cleaning">干洗</string>
    <string name="home_category_cloth_recyce">旧衣回收</string>
    <string name="home_category_cloth_lease">时装租赁</string>
    <string name="home_category_cloth_care">衣物护理</string>
    <string name="home_category_cloth_manager">衣物管家</string>
    <string name="home_category_student_entrepreneurship">学生创业</string>
    <string name="nearby_stores">附近营业点</string>
    <string name="outlet">营业点</string>
    <string name="nearby_stores_desc">欢迎使用海乐生活智慧物联设备</string>
    <string name="home_guide">自助洗烘指南</string>
    <string name="home_guide_desc">遇到问题来这里快速解决</string>
    <string name="can_appointment">可预约</string>
    <string name="can_not_appointment">不可预约</string>
    <string name="device_can_not_appointment">设备无法预约</string>
    <string name="can_not_appointment1">无法预约</string>
    <string name="in_operation">营业中</string>
    <string name="stop_of_business">停业中</string>
    <string name="wallet_balance">钱包余额</string>
    <string name="mine_starfish">我的海星</string>
    <string name="discount">优惠折扣</string>
    <string name="mine_order">我的订单</string>
    <string name="check_all_order">查看全部订单</string>
    <string name="unpaid">未支付</string>
    <string name="running">进行中</string>
    <string name="finished">已完成</string>
    <string name="refund">退款</string>
    <string name="mine_wallet">我的钱包</string>
    <string name="fun_service">功能服务</string>
    <string name="discount_coupon">优惠券</string>
    <string name="online_service">在线客服</string>
    <string name="service_phone">客服电话</string>
    <string name="go_recharge">去充值</string>
    <string name="scan_order_wash_hint">温馨提示：请勿将宠物用品、鞋类、易损衣物放入洗衣机清洗。</string>
    <string name="scan_order_dryer_hint">温馨提示：烘干前请检查衣物是不遗留易燃易爆物品。</string>
    <string name="scan_order_shoes_hint">温馨提示：请勿将宠物用品、易损衣物放入洗鞋机清洗。</string>
    <string name="scan_order_hair_hint">温馨提示：使用时请不要离吹风口太近避免烫伤。</string>
    <string name="select_category_model">请选择设备类型</string>
    <string name="select_work_model">请选择%1$s功能</string>
    <string name="select_work_time">请选择%1$s时长</string>
    <string name="shop">门店</string>
    <string name="device_idle_num_prompt">设备（空闲%1$d/共%2$d）</string>
    <string name="device_code">设备编号</string>
    <string name="imei">IMEI</string>
    <string name="use_time">使用时长</string>
    <string name="use_quantity">使用量</string>
    <string name="select_work_device">请选择%1$s设备</string>
    <string name="please_select">请选择</string>
    <string name="appoint_submit_prompt">温馨提示：\n1、预约时间超时10分钟未使用，则订单自动失效， 不退款。\n2、预约单生效前10分钟取消，系统自动退款。预约单生效不足10分钟取消，不退款。</string>
    <string name="queue_num">排队人数</string>
    <string name="appoint_use_time">预计使用时间</string>
    <string name="appoint_device_queue_use_time">%1$s排队%2$d人，预计使用时间</string>
    <string name="appoint_order_detail_prompt">温馨提示：\n1、到店后可用微信/支付宝/海乐生活APP扫码解锁设备。\n2、因自身原因超时未使用的订单将无法退款。</string>
    <string name="appoint_order_detail_prompt2">\n2、因自身原因超时未使用的订单将无法退款。</string>
    <string name="select_model">选择模式</string>
    <string name="cancel_appoint_order_prompt">是否取消订单？</string>
    <string name="device_repairs">设备报修</string>
    <string name="device_info">设备信息</string>
    <string name="device_info_hint">请扫描设备上的二维码</string>
    <string name="device_type">设备类型</string>
    <string name="fault_type">故障类型</string>
    <string name="fault_desc">故障描述</string>
    <string name="fault_desc_hint">请填写具体故障表现。</string>
    <string name="repairs_record">报修记录</string>
    <string name="replied">已回复</string>
    <string name="no_reply">未回复</string>
    <string name="repairs_time">报修时间</string>
    <string name="device_repairs_info">设备报修信息</string>
    <string name="device_name">设备名称</string>
    <string name="pic_browse">图片浏览</string>
    <string name="device_cur_status">设备当前状态</string>
    <string name="mine_order_status">我的订单状态</string>
    <string name="refund_record">退款记录</string>
    <string name="recharge_record">充值记录</string>
    <string name="refund_list_prompt">退款后充值海星和赠送海星都会清零</string>
    <string name="apply_refund">申请退款</string>
    <string name="apply_time">申请时间</string>
    <string name="refund_time">退款时间</string>
    <string name="refund_detail">退款详情</string>
    <string name="system_setting">系统设置</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="personal_info">个人资料</string>
    <string name="mine_head_image">我的头像</string>
    <string name="nickname">昵称</string>
    <string name="nickname_update">昵称修改</string>
    <string name="nickname_hint">请输入昵称</string>
    <string name="contact_platform">联系平台</string>
    <string name="platform_phone">400-015-5599</string>
    <string name="close_account">注销账户</string>
    <string name="logout">退出登录</string>
    <string name="version">版本</string>
    <string name="new_version">新版本</string>
    <string name="update_content">更新内容</string>
    <string name="update_version_title">新版本%1$s主要更新内容</string>
    <string name="click_update">点击升级</string>
    <string name="in_prepare">准备中</string>
    <string name="err_save_file">文件保存失败</string>
    <string name="use_rule">使用规则</string>
    <string name="next_step">下一步</string>
    <string name="friendly_reminder">温馨提示</string>
    <string name="scan_order_confirm_prompt">在提交订单后，按洗衣机上的桶自洁按键，会导致设备不能正常使用。若需要桶自洁，请在提交订单前操作。</string>
    <string name="go_buy">去购买</string>
    <string name="no_prompt">不再提示</string>
    <string name="special_device_prompt">在提交订单后，按洗衣机上的桶自洁按键，会导致设备不能正常使用。若需要桶自洁，请在提交订单前操作。</string>
    <string name="order_sure_prompt">确认后，机器将自动启动，请务必确认</string>
    <string name="submit_order">提交订单</string>
    <string name="submit_order_prompt">请在规定时间内支付，否则订单将会取消</string>
    <string name="go_pay">去支付</string>
    <string name="good_discount">分摊优惠</string>
    <string name="actually_paid">小记</string>
    <string name="order_discount_coupon">优惠红包</string>
    <string name="limited_time_offer">限时优惠</string>
    <string name="limited_time_offer_prompt">限时%1$s折</string>
    <string name="shop_coupon">商家优惠红包</string>
    <string name="platform_coupon">平台优惠红包</string>
    <string name="starfish">海星</string>
    <string name="starfish_discount">海星抵扣</string>
    <string name="available_coupon_num">未选红包，最多%1$d张可用 ></string>
    <string name="order_discount_coupon_selector">选择优惠红包</string>
    <string name="order_pay_time_remaining">支付剩余时间</string>
    <string name="select_model_of_pay">选择支付方式</string>
    <string name="model_of_pay">支付方式</string>
    <string name="cashier_desk">收银台</string>
    <string name="balance_pay">余额支付</string>
    <string name="balance">余额</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信</string>
    <string name="result_fellback">结果反馈</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_success_hint">设备将在稍后为您启动，预计将在今日%1$s左右完成%2$s。完成后会通过消息通知到您，请及时取走衣物</string>
    <string name="pay_now">立即支付</string>
    <string name="starfish_refund">海星退款</string>
    <string name="refund_total_amount">退款总金额</string>
    <string name="alipay_account">支付宝账号</string>
    <string name="name">姓名</string>
    <string name="alipay_account_hint">请输入支付宝账号</string>
    <string name="alipay_name_hint">请填写支付宝账号认证的姓名</string>
    <string name="close_account_prompt">以下信息将被清空 且无法找回</string>
    <string name="close_account_infos1">身份、账号信息</string>
    <string name="close_account_infos2">交易信息</string>
    <string name="close_account_infos3">个人隐私信息</string>
    <string name="close_account_infos4">红包、海星等</string>
    <string name="close_account_prompt2">请先确保所有交易已完结且无纠纷，账号删除后的历史交易可能产生的资金退回权益等将视作自动放弃。</string>
    <string name="sure_close">确认注销</string>
</resources>