<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.yunshang.haile_life.business.vm.UpdateNickNameViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activity.personal.UpdateNickNameActivity">

        <com.yunshang.haile_life.ui.view.CommonTitleActionBar
            android:id="@+id/bar_update_nickname_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_action_bar_h"
            android:background="@color/white"
            app:title="@string/nickname_update" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Font_16_black_45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_update_value"
                style="@style/Font_16_black_85_45"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:hint="@string/nickname_hint"
                android:background="@color/transparent"
                android:text="@={vm.nickName}" />
        </LinearLayout>

        <com.lsy.framelib.ui.weight.SingleTapTextView
            android:id="@+id/btn_update_nick_name_save"
            style="@style/Font_16_black_85"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/save" />
    </LinearLayout>
</layout>