<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isDryer"
            type="java.lang.Boolean" />

        <variable
            name="isZero"
            type="java.lang.Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="34dp">

        <com.lsy.framelib.ui.weight.SingleTapTextView
            android:id="@+id/tv_order_pay_cancel"
            style="@style/Font_16_black_65"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingHorizontal="16dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@id/tv_order_pay_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_order_pay_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_order_pay_title"
            style="@style/Font_18_black_85_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/select_model_of_pay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rg_order_pay_way"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_order_pay_title">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_order_balance_pay_way"
                style="@style/Font_14_black_85_bold"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@color/transparent"
                android:button="@null"
                android:drawableStart="@mipmap/icon_pay_account_way"
                android:drawableEnd="@{isDryer?@drawable/selector_orange_check:@drawable/selector_cyan_check}"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:text="@string/balance"
                android:visibility="@{isZero?View.VISIBLE:View.GONE}" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_order_alipay_pay_way"
                style="@style/Font_14_black_85_bold"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@color/transparent"
                android:button="@null"
                android:drawableStart="@mipmap/icon_pay_alipay_way"
                android:drawableEnd="@{isDryer?@drawable/selector_orange_check:@drawable/selector_cyan_check}"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:text="@string/alipay"
                android:visibility="@{isZero?View.GONE:View.VISIBLE}" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_order_wechat_pay_way"
                style="@style/Font_14_black_85_bold"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@color/transparent"
                android:button="@null"
                android:drawableStart="@mipmap/icon_pay_wechat_way"
                android:drawableEnd="@{isDryer?@drawable/selector_orange_check:@drawable/selector_cyan_check}"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:text="@string/wechat"
                android:visibility="@{isZero?View.GONE:View.VISIBLE}" />
        </RadioGroup>

        <View
            style="@style/DividingStyle"
            app:layout_constraintBottom_toBottomOf="@id/rg_order_pay_way"
            tools:ignore="MissingConstraints" />

        <com.lsy.framelib.ui.weight.SingleTapButton
            android:id="@+id/btn_order_pay"
            style="@style/CommonMatchBtnStyle1"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="10dp"
            android:text="@string/pay_now"
            app:layout_constraintTop_toBottomOf="@id/rg_order_pay_way" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>